--- a/roles/pihole/templates/dnsmasq.d/99-split-dns.conf.j2
+++ b/roles/pihole/templates/dnsmasq.d/99-split-dns.conf.j2
@@ -4,3 +4,5 @@ host-record={{ domain }},{{ local_ip }}
 host-record={{ domain }},{{ tailscale_ip }}
 host-record=pihole.{{ domain }},{{ local_ip }}
 host-record=pihole.{{ domain }},{{ tailscale_ip }}
+host-record=traefik.{{ domain }},{{ local_ip }}
+host-record=traefik.{{ domain }},{{ tailscale_ip }}
