Added Homepage dashboard with enabled Docker integration
Services are dynamically discovered with use of Docker labels.

--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,3 +1,4 @@
 {
-  "data-root": "{{ docker_root }}"
+  "data-root": "{{ docker_root }}",
+  "hosts": ["tcp://0.0.0.0:2375", "unix:///var/run/docker.sock"]
 }
