--- a/roles/authelia/templates/configuration.yml.j2
+++ b/roles/authelia/templates/configuration.yml.j2
@@ -31,6 +31,8 @@ access_control:
       policy: "one_factor"
     - domain: "pihole.{{ domain }}"
       policy: "one_factor"
+    - domain: "dozzle.{{ domain }}"
+      policy: "one_factor"
 
 session:
   name: authelia_session
