--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,4 +1,4 @@
 {
   "data-root": "{{ docker_root }}",
-  "hosts": ["tcp://0.0.0.0:2375", "unix:///var/run/docker.sock"]
+  "hosts": ["unix:///var/run/docker.sock"]
 }
